--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ header {
 }
 
 main {
-  width: 70%;
+  width: 90%;
   height: 600px;
   background: rgba(255, 255, 255, 0.259);
   overflow-y: auto;
@@ -142,5 +142,14 @@ main {
     border-radius: 5px;
     color: white;
     font-size: 1.2em;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  header h1 {
+    font-size: 1.3em;
+  }
+  .register-note {
+    width: 90%;
   }
 }
